# TranslitFiesNamesInDir

./: CMakeLists.txt
files/: CopyFileClass.cpp  CopyFileClass.h  FileReplaceDialogClass.cpp  FileReplaceDialogClass.h  GetDirectoryfFromPathClass.cpp  GetDirectoryfFromPathClass.h  IfFileNameAlreadyExistsClass.cpp  IfFileNameAlreadyExistsClass.h  Resource.aps  Resource.rc  SlovarClass.cpp  SlovarClass.h  TranslitClass.cpp  TranslitClass.h  Utf16ToUtf8_Class.cpp  Utf16ToUtf8_Class.h  Utf8ToUtf16_Class.cpp  Utf8ToUtf16_Class.h  main.cpp  resource.h
